data/derived/comb/progs/unify/prog2695.ml.out
Characters 29-45:
  let fixpoint (f,b) = wwhile ((b*b*b, b < 100),b);;
                               ^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
